# household_ledger

./: Cargo.toml  index.html
css/: chunk-vendors.2fcce2d8.css  chunk-vendors.d84cd7f2.css
hhl_db_accessor/: Cargo.toml
hhl_db_accessor/src/: lib.rs
hhl_load_data/: Cargo.toml
hhl_load_data/src/: main.rs
hhl_save_data/: Cargo.toml
hhl_save_data/src/: main.rs
js/: app.cab80bc4.js  app.cab80bc4.js.map  app.eab33f14.js  chunk-04f9d4b2.38503359.js  chunk-1787a9cc.bf2da28a.js  chunk-1d955f52.60b7ad24.js  chunk-1d955f52.60b7ad24.js.map  chunk-29e29b2c.2533a024.js  chunk-2d0b26e6.36378875.js  chunk-2d0b2d3b.c2f2be25.js  chunk-2d0c9398.b6243e3f.js  chunk-2d0cf6e3.e92265e4.js  chunk-2d0cf6e3.e92265e4.js.map  chunk-2d0d7c42.82642aae.js  chunk-2d0d7c42.82642aae.js.map  chunk-2d209182.ae638f9f.js.map  chunk-2d21d0be.9d5dd782.js  chunk-2d22dbc9.07d216b6.js  chunk-2d23154f.57d9bcec.js  chunk-2d23154f.57d9bcec.js.map  chunk-59a670fc.35712324.js  chunk-59a670fc.35712324.js.map  chunk-d845e6da.693e63f2.js.map  chunk-vendors.6b33b722.js
src/: lib.rs
web_client/: .gitignore  package.json  vue.config.js
web_client/amplify/: team-provider-info.json
web_client/amplify/.config/: project-config.json
web_client/amplify/backend/: backend-config.json
web_client/amplify/backend/auth/hhlwebclientc1b27f37/: parameters.json
web_client/src/: App.vue  main.js
