[package]
authors = ["Jaeyong Choi <jayong93@gmail.com>"]
edition = "2018"
name = "household_ledger"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamodb = {git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.7-alpha", package = "aws-sdk-dynamodb"}
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.25"
